# openpam-modules

./: AUTHORS  Make.defs  Makefile.am  NEWS  configure.ac
examples/pam.d/: system-auth
include/security/: pam_mod_misc.h
modules/: Makefile.am
modules/pam_deny/: Makefile.am  pam_deny.c
modules/pam_nologin/: Makefile.am  pam_nologin.c
modules/pam_permit/: Makefile.am  pam_permit.c
modules/pam_rootok/: Makefile.am  pam_rootok.c
modules/pam_securetty/: Makefile.am  pam_securetty.c
modules/pam_shells/: Makefile.am  pam_shells.c
modules/pam_unix/: Makefile  Makefile.am  pam_unix.8  pam_unix.c  util.c  util.h
modules/pam_wheel/: Makefile.am  pam_wheel.c
